Fix deadlock when doing perspective transform

When the perspective transform shape becomes convex, perspecive
calculations explode causing a deadlock. So we just prevent that from
happening by blocking further handle movement when the shape stops being
convex.

BUG:520602